--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
+.black-img{
+  background-color:black;
+}
+
 .column-div {
   display: flex;
   flex-direction: row;
