--- a/src/App.css
+++ b/src/App.css
@@ -48,12 +48,20 @@
   width: 70%;
 }
 
+.myColumnCurveCanvas {
+  display: flex;
+  flex-direction: column;
+  float: center;
+  height: 15vw;
+  width: 15vw;
+}
+
 .myColumnCanvasTree {
   display: flex;
   flex-direction: column;
   float: center;
-  height: 24vw;
-  width: 24vw;
+  height: 30vw;
+  width: 30vw;
 }
 .myColumnOptionsTree {
   display: flex;
